# tkg-gui

./: .gitignore  .gitmodules  AGENTS.md  BUILD.md  Cargo.toml  PKGBUILD  PLAN.md  README.md  com.tkg-gui.policy  tkg-gui.desktop
pkg/: PKGBUILD
pkg/tkg-gui/: FETCH_HEAD  config  packed-refs
pkg/tkg-gui/objects/pack/: pack-9e06a7fad1606f7442597b73eebc8796104090cc.idx  pack-9e06a7fad1606f7442597b73eebc8796104090cc.pack  pack-9e06a7fad1606f7442597b73eebc8796104090cc.rev
refs/archive/: PLAN.md  WINE_TKG_PLAN.md
src/: app.rs  main.rs  settings.rs
src/core/: build_manager.rs  config_manager.rs  http_client.rs  kernel_downloader.rs  kernel_fetcher.rs  mod.rs  patch_manager.rs  patch_registry.rs  repo_manager.rs  wine_build_manager.rs  wine_config_manager.rs  work_dir.rs
src/data/: catalog.rs
src/tabs/: build.rs  config.rs  kernel.rs  mod.rs  patches.rs  settings.rs  wine.rs
