[package]
name = "tkg-gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tkg-gui"
path = "src/main.rs"

[dependencies]
eframe = "0.29"
egui = "0.29"
ureq = "2"
scraper = "0.20"
regex = "1"
xz2 = "0.1"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
tar = "0.4"
